tests/snapshots/examples_fixtures/type_system__72_list_boundary_runtime_check_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/72_list_boundary_runtime_check_ok.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/type_system/72_list_boundary_runtime_check_ok.flx:2:5
  |
2 |     fold(xs, 0, /(acc: Int, x: Int) -> acc + x)
  |     ^^^^

Hint:
  Define it first: let fold = ...;
== stdout ==
<not executed>
